REGRESSION(r195899): ASSERTION FAILED: is<Target>(source) in EventPath::retargetTouch() since r195899 https://bugs.webkit.org/show_bug.cgi?id=153741

Patch by Adrien Plazas <aplazas@igalia.com> on 2016-02-02
Reviewed by Ryosuke Niwa.

* dom/EventDispatcher.cpp:
(WebCore::EventPath::retargetTouch):

Canonical link: https://commits.webkit.org/171871@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@196009 268f45cc-cd09-0410-ab3c-d52691b4dbfc